| Summary: | ASTERISK-24392: res_fax: fax gateway sessions leak | ||
| Reporter: | Corey Farrell (coreyfarrell) | Labels: | |
| Date Opened: | 2014-10-05 22:10:10 | Date Closed: | 2014-10-14 11:48:47 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_fax |
| Versions: | SVN 11.13.0 12.6.0 13.0.0-beta2 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Fax gateway sessions are added to faxregistry.container, then later added again. It seems that when it is re-added it adds a second reference into the container due to the id being different. This prevents the session from ever being unallocated.
Marked this ticket as major since it results in a leak for each gateway fax session. | ||
| Comments: | |||